--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "game scraper",
   "main": "server.js",
   "scripts": {
-    "test": ".node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eyalliebermann/games.git"
+    "url": "https://github.com/eyalliebermann/games.git"
   },
   "keywords": [
     "scraper",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/eyalliebermann/games#readme",
   "devDependencies": {
+    "chai": "^4.0.2",
     "mocha": "^3.4.2"
   },
   "dependencies": {
