--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "mocha": "^3.4.2"
   },
   "dependencies": {
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "cheerio": "^1.0.0-rc.1",
+    "express": "^4.15.3",
+    "request": "^2.81.0"
   }
 }
