--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "game scraper",
   "main": "server.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
