--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "game scraper",
   "main": "server.js",
   "scripts": {
-    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
+    "build": "webpack --config ./webpack.config.js --progress --colors",
     "test": "./node_modules/.bin/mocha",
     "prod": "NODE_ENV=production node server.js"
   },
@@ -22,6 +22,9 @@
     "url": "https://github.com/eyalliebermann/games/issues"
   },
   "homepage": "https://github.com/eyalliebermann/games#readme",
+  "engines": {
+    "node": "8.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
